--- a/src/institucion/View/InstituicionMenuView.form
+++ b/src/institucion/View/InstituicionMenuView.form
@@ -55,6 +55,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Formulario de Alumnos"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jFormulariodeAlumnosActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
