--- a/src/institucion/View/AlumnoView.form
+++ b/src/institucion/View/AlumnoView.form
@@ -136,7 +136,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Lejajo"/>
+        <Property name="text" type="java.lang.String" value="Legajo"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtidAlumno">
