Todas las vistas funcionando

--- a/src/institucion/View/InstitucionMenuView.form
+++ b/src/institucion/View/InstitucionMenuView.form
@@ -98,7 +98,7 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jListadodeAlumnosxMateria">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Listado de Alumnos x Materia"/>
+                <Property name="text" type="java.lang.String" value="Listado de Alumnos por Materia"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jListadodeAlumnosxMateriaActionPerformed"/>
