--- a/src/institucion/View/CargaNotas.form
+++ b/src/institucion/View/CargaNotas.form
@@ -109,9 +109,9 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="4">
-                <Column editable="true" title="ID" type="java.lang.Integer"/>
+                <Column editable="true" title="ID Materia" type="java.lang.Integer"/>
                 <Column editable="true" title="Materia" type="java.lang.String"/>
-                <Column editable="true" title="Nota" type="java.lang.Integer"/>
+                <Column editable="true" title="Nota" type="java.lang.Double"/>
               </Table>
             </Property>
           </Properties>
@@ -122,11 +122,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Cancelar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbCancelarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jbGuardar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Guardar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbGuardarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="jcAlumnoNota">
       <Properties>
